@@ -15,6 +15,7 @@ PUBLIC SUB Form_Open()
     ME.Close
   ENDIF 
   
+  Module.Detect_Terminal_emulator()
   Module.CheckExistence()
 END
 
