@@ -14,11 +14,11 @@ MOUNT_PATH="/media/ISO"
 # Preferences
 MESSAGES_COLORS=1
 FORCE_CHROOT=0
-RESOLUTION=640x480
 EDITOR=nano
-VRAM=256
+RESOLUTION=640x480
 WIN_EXECUTABLES=0
 BOOT_FILES=0
+VRAM=256
 COMPRESSION=bzip2
 
 # Saved variables
